--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,4 +1,4 @@
-.page-header {
+    .page-header {
     background-color: #C25100;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
@@ -8,6 +8,10 @@
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+}
+
+.comment {
+    margin: 20px 0px 20px 20px;
 }
 
 .content {
